tests/paczka1/small_fuzzy/99946790.err
Error in line 1: epahMjo S904 61,1
Error in line 2: duc23FMJEK S596 971,5
Error in line 3: epahMjo S359 19,8
Error in line 7: vxBNclqt2MJ S359 9,4
